deploy/llm-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: llm-ingress
  namespace: llm
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`llm.stheoulle.com`) && PathPrefix(`/.well-known/acme-challenge`)
      kind: Rule
      services:
        - name: llm-service
          port: 5000
      # Pas de middleware ici, pour que Traefik serve directement le challenge HTTP-01
    - match: Host(`llm.stheoulle.com`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: llm-service
          port: 5000
  tls:
    certResolver: le
